--- a/src/css/sidebar/sidebar.css
+++ b/src/css/sidebar/sidebar.css
@@ -13,12 +13,27 @@
 .sidebarTitle {
     position: absolute;
     left: 16px;
-    top: 20px;
+    top: 24px;
     font-size: 24px;
 }
 
-.theme-toggle {
+.sidebarTitle .icon {
+    height: 46px;
+    margin-top: -12px;
+}
+
+.themeToggle {
     position: absolute;
     right: 16px;
-    top: 20px;
+    top: 0px;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+.themeToggle:hover {
+    transform: scale(1.1);
+}
+
+.themeToggle .icon {
+    width: 32px;
 }
